--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Deployable Knowledge</title>
+  <link rel="icon" href="/static/favicon.ico" />  
   <link rel="stylesheet" href="/static/css/style.css" />
+<script type="module">
+  import "/static/js/marked.min.js";
+  window.marked = marked;
+</script>  
   <script type="module" src="/static/js/main.js"></script>
 </head>
 <body>
@@ -20,6 +25,18 @@
       </div>
     </div>
   </div>
+
+  <div id="persona-modal" class="modal hidden">
+  <div class="modal-content">
+    <h2>Edit Prompt Persona</h2>
+    <textarea id="persona-text" rows="10" placeholder="Enter system prompt here..."></textarea>
+    <div class="modal-actions">
+      <button id="save-persona-btn">Save</button>
+      <button id="close-persona-btn">Cancel</button>
+    </div>
+  </div>
+</div>
+<button id="open-persona-btn">Edit Persona</button>
 
   <div class="container">
 
@@ -72,6 +89,8 @@
       <div id="search-results"></div>
     </div>
   </div>
+
+
 
 </body>
 </html>
