--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
 </div>
 <button id="open-persona-btn">Edit Persona</button>
 
-  <div class="container">
+<div class="container">
 
 <div id="doc-panel-wrapper" class="column-wrapper">
   <div class="column" id="doc-manager">
@@ -75,7 +75,9 @@
         <input type="text" id="user-input" placeholder="Type a message..." />
         <button type="submit">Send</button>
       </form>
-
+<div id="search-panel-wrapper" class="column-wrapper">
+  
+      <button id="toggle-search-btn">🡸</button>
       <h2>Search Documents</h2>
       <form id="search-form">
         <input type="text" id="search-query" placeholder="Enter search text..." />
@@ -87,6 +89,7 @@
         <button type="submit">Search</button>
       </form>
       <div id="search-results"></div>
+    </div>
     </div>
   </div>
 
