--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,8 +47,8 @@
         class="warning-box"
         style="margin: 0; margin-left: auto"
       >
-        Uploading documents and using the Assistant Chat together may cause
-        performance issues.
+        Uploading documents and using the Assistant Chat simultaneously may
+        cause performance issues.
       </div>
     </div>
 
