--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="container">
-      <div id="doc-panel-wrapper" class="column-wrapper">
+      <div id="doc-panel-wrapper" class="column-wrapper scrollable">
         <div class="column" id="doc-manager">
           <div class="header-row">
             <h2>Document Library</h2>
@@ -76,7 +76,7 @@
       </div>
 
       <!-- Chat + Search -->
-      <div class="column">
+      <div class="column scrollable">
         <h2>Assistant Chat</h2>
         <div id="chat-box" class="chat-box">
           <div>
